test_suite/alan-2022-examples/failing/008610_mutation.alan
source P function z(boolean boolean) begin relax end begin relax end
